# TeamProject10

./: .gitignore  .gitignore.txt  CHANGELOG.md  README.md  TODO.txt  build.ps1  build.sh  main.py  vault.db
VaultMind-Next/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
VaultMind-Next/docs/: AI_PLANNER.md  ARCHITECTURE.md  BACKUP_RESTORE.md  EMAIL_CHALLENGES.md  EMAIL_MONITORING.md  PRODUCT_READINESS.md  RELEASES.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  TRUSTED_AGENT.md  VULNERABILITY_SCANNING.md
VaultMind-Next/infra/caddy/: Caddyfile  Dockerfile
VaultMind-Next/infra/proxmox/: README.md
VaultMind-Next/scripts/: generate_sbom.py  verify_security_reports.py
VaultMind-Next/src/vaultmind_agent/: __init__.py  adapters.py  cli.py  client.py  config.py  email_challenge.py  email_oauth.py  identity.py  recovery.py  runner.py  vault.py
VaultMind-Next/src/vaultmind_demo_provider/: __init__.py  api.py  main.py
VaultMind-Next/src/vaultmind_next/: __init__.py  api.py  auth.py  automation.py  backup.py  crypto.py  device.py  email.py  email_monitor.py  models.py  planner.py  rotation.py  scheduler.py  storage.py
VaultMind-Next/tests/: test_agent.py  test_api.py  test_backup.py  test_core.py  test_email_challenge.py  test_email_monitor.py  test_email_oauth.py  test_planner.py  test_supply_chain.py  test_web.py
VaultMind-Next/web/: app.js  index.html  styles.css
core/: vault_core.cpp
gui/: app.py
scripts/: fix_git_tracking.sh
tests/: test_prototype.py  test_vaultmind.py
vaultmind/: __init__.py  audit.py  auth.py  (+5 more)
(+7 files in other folders)
